[package]
name = "key_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
base64 = "0.21.2"
clap = { version = "4.3.2", features = ["derive"] }
rand_core = { version = "0.6.4", features = ["std"] }
ring-compat = { version = "0.7.0", features = ["pkcs8", "getrandom", "std"] }
